--- a/index9.html
+++ b/index9.html
@@ -3,28 +3,25 @@
   <script src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
+
   <script src="https://unpkg.com/prop-types@15.6.1/prop-types.js"></script>
   <script type="text/babel">
+    const rootElement = document.getElementById('root')
 
-    function CharacterCount({text}) {
-
-      React.createElement('div', null, 'The text...')
-      return (
-        <div>
-          {`The text "${text}" has `}
-          {text.length ? <strong>{text.length}</strong> : 'No'}
-          {' characters'}
-        </div>
-      )
-    }
-
+    function tick() {
+    const time = new Date().toLocaleTimeString()
     const element = (
-      <>
-        <CharacterCount text="Hello World"/>
-        <CharacterCount text=""/>
-      </>
+      <div>
+        <input value={time}/>
+        <input value={time}/>
+      </div>
     )
 
-    ReactDOM.render(element, document.getElementById('root'))
+    ReactDOM.render(element, rootElement)
+    }
+
+    tick()
+    setInterval(tick, 1000)
+
   </script>
 </body>
