--- a/index22.html
+++ b/index22.html
@@ -7,24 +7,28 @@
   <script type="text/babel">
 
     function UsernameForm() {
+      const [username, setUsername] = React.useState('')
+ 
       function handleSubmit(event) {
         event.preventDefault()
         console.dir(event.target)
-        const username = event.target.elements.usernameInput.value
         alert(`You entered ${username}`)
+      }
+
+      function handleChange(event) {
+        setUsername(event.target.value.tolowerCase())
       }
 
       return (
         <form onSubmit={handleSubmit}>
           <div>
             <label htmlFor="usernameInput">Username:</label>
-            <input id="usernameInput" type="text"/>
+            <input id="usernameInput" type="text" onChange={handleChange} value={username}/>
           </div>
           <button type="submit">Submit</button>
         </form>
       )
     }
-
     ReactDOM.render(<UsernameForm/>, document.getElementById('root'))
   </script>
 </body>
