--- a/index23.html
+++ b/index23.html
@@ -6,6 +6,7 @@
   <script src="https://unpkg.com/react-error-boundary@1.2.5/dist/umd/react-error-boundary.js"></script>
 
   <script type="text/babel">
+    const ErrorBoundary = ReactErrorBoundary.ErrorBoundary
 
     // class ErrorBoundary extends React.Component {
     //   state = {error: null}
@@ -20,10 +21,6 @@
     //     return this.props.children
     //   }
     // }
-
-    
-
-
 
     function ErrorFallback ({error}) {
       return (
